# irisbot

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AI_CONTEXT.md  Makefile  README.md  auth.py  conftest.py  coverage.xml  database.py  db_manager.py  download_project_html.py  downloader.py  iris_selectors.py  main.py  phase2_migrate_db.py  pyproject.toml  pytest.ini  reconnaissance.py  requirements-dev.txt  requirements.txt  run_tests.py  scrape_catalog_phase1.py  scraper.py  utils.py
.ai/: INDEX.md
.ai/context/: ARCHITECTURE.md  CONFIGURATION.md  DATA_MODEL.md  IMPLEMENTATION_STATUS.md  PROJECT_OVERVIEW.md
.ai/guidelines/: AI_AGENT_GUIDELINES.md  CODING_STANDARDS.md  PRE_COMMIT_SETUP.md  SCRAPING_RULES.md  TESTING_GUIDE.md  TESTING_QUICKSTART.md
.ai/phase2/: NEXT_STEPS.md  PHASE2_STATUS.md  README.md
.ai/reconnaissance/: PHASE2_RECONNAISSANCE.md
.ai/roadmap/: ROADMAP.md
.pre-commit-hooks/: check_docstrings.py  check_project_constraints.py  check_type_hints.py
phase2_analysis/: analyzer_templates.json
reports/: report.json
src/: auth.py  config.py  db_manager.py  scrape_catalog_phase1.py  utils.py
tests/: conftest.py  test_auth.py  test_change_detection.py  test_config.py  test_database.py  test_database_extra.py  test_db_manager.py  test_db_migration.py  test_downloader.py  test_edge_cases.py  test_iris_selectors.py  test_iteration_counters.py  test_main_extra.py  test_main_run_scraper.py  test_phase2_extractors.py  test_scrape_catalog.py  test_utils.py  test_utils_extra.py  test_utils_more.py
(+7 files in other folders)
