[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irisbot"
version = "0.1.0"
description = "Real estate catalog scraper for Iris properties"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["auth", "config", "database", "db_manager", "downloader", "scraper", "utils", "iris_selectors", "scrape_catalog_phase1", "pagination", "main"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "import-error",
    "missing-module-docstring",
    "C0111",  # Docstring not required (pydocstyle handles it)
]
enable = [
    "C0302",  # Too many lines in module
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.master]
fail-under = 10.0
errors-only = false
